# kaspi_etl

./: .env.example  .env.local  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTOMATION_ANALYSIS.md  CONFIG.yaml  DATA_FILES_GUIDE.md  GOALS.md  Makefile  PROGRESS.md  README.md  RULES.md  STATE.json  TASKS.yaml  kaspi api docs  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS:
.tmp_assistant_bundle_feat-offers-dashboard_5Qri/: changes.diff
.tmp_assistant_bundle_feat-offers-dashboard_95Zh/: changes.diff
alerts/: 20250813_0626.md
backend/: app.py
config/: crm.yml  size_map.csv
data_crm/: archive_orders_since_20250701.xlsx  business_model.xlsm  missing_skus.csv  missing_skus_20250813.csv  orders_api_latest.csv  orders_clean_preview.csv  orders_kaspi_with_sizes.xlsx  processed_sales_20250813.csv  processed_sales_latest.csv  processed_sales_linked.csv  sales_ksp_crm_20250813_v1.xlsx  sales_ksp_crm_fixed.xlsx  size_grid_all_models.csv  size_grid_all_models.xlsx  size_grid_by_model_group.xlsx  sku_map_crm_20250813_v1.xlsx  stock_on_hand.csv  stock_on_hand_updated.csv
data_raw/: ActiveOrders 31.7.25.xlsx  M02_SKU_CATALOG Sample for gpt.csv  Purchase inquiry made by me.xlsx
db/: erp.db  schema.sql
docs/: ANALYSIS_BUNDLE.md  DATA_DICTIONARY.md  DECISIONS.md  OPERATING.md  PIPELINE.md  PROGRESS.md  STATUS.md  TASKS.yaml  kaspi_api.md  perfume_offers_scrape.md
hooks/: pre-commit
integrations/: whatsapp_api.py
notebooks/: sales_quicklook.ipynb
scripts/: __init__.py  ci_sanity.py  (+77 more)
(+574 files in other folders)
