[project]
name = "kaspi-crm-etl"
version = "0.1.0"
description = "Kaspi CRM ETL tools"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.scripts]
crm-etl = "scripts.crm_cli:main"


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle (errors)
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP"  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests", "scripts"]

